check attribute existance and proper attribute values

--- a/todo.txt
+++ b/todo.txt
@@ -1,43 +1,41 @@
-reset button
+[ ] reset button
 
 
-screen needs overflow:hidden;
+[ ] screen needs overflow:hidden;
 
-needs wrapping text on text elements
+[ ] test error when text tag isn't closed
 
-test error when text tag isn't closed
+[X] same error for attributes and attribute values, not just tags (attribute values don't have numbers in them)
 
-same error for attributes and attribute values, not just tags (attribute values don't have numbers in them)
+[ ] not a valid tag - wrong line numbers
 
-not a valid tag - wrong line numbers
+[ ] enforce units on numbers (sp for fonts, dp for everything else)
+[ ] check layout_width="wrap_content" on TextView (node 9 in script)
 
-enforce units on numbers (sp for fonts, dp for everything else)
-check layout_width="wrap_content" on TextView (node 9 in script)
+[ ] remove auto-adding LinearLayout
 
-remove auto-adding LinearLayout
-
-explore defaults around image views
-centerInside is the default
+[ ] explore defaults around image views
+[ ] centerInside is the default
 
 
-remove layout_gravity for now
+[ ] remove layout_gravity for now
 
-implement gravity
-
-
-check how codemirror handles indentation
-have to implement layout_gravity
-
-let's do scaling later, when we have an example layout to play with
+[ ] implement gravity
 
 
-feature detection for onhashchange
+[ ] check how codemirror handles indentation
+[ ] have to implement layout_gravity
+
+[ ] let's do scaling later, when we have an example layout to play with
 
 
-layout_width and layout_height with wrap_content gets the height of the image, then squeezes it down.
+[ ] feature detection for onhashchange
 
 
-Button
+[ ] layout_width and layout_height with wrap_content gets the height of the image, then squeezes it down.
+
+
+[ ] Button
 grey bg, Button XML class
 	android:text
 	android:width
